--- a/src/main/resources/static/stock-in.html
+++ b/src/main/resources/static/stock-in.html
@@ -44,8 +44,8 @@
           <!-- Stock In Info removed as requested -->
         </aside>
         <div class="layout-main space-y-6">
-          <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 max-w-none" id="stockin-kpi-row">
-<div class="card-modern p-4"><p class="text-xs text-gray-500 mb-1">当前入库商品数</p><h3 class="text-xl font-bold" id="kpi-item-count">0</h3></div><div class="card-modern p-4"><p class="text-xs text-gray-500 mb-1">预计总进货额</p><h3 class="text-xl font-bold" id="kpi-total-cost">¥0.00</h3></div><div class="card-modern p-4"><p class="text-xs text-gray-500 mb-1">预计总零售价</p><h3 class="text-xl font-bold" id="kpi-total-price">¥0.00</h3></div><div class="card-modern p-4"><p class="text-xs text-gray-500 mb-1">预计综合毛利</p><h3 class="text-xl font-bold" id="kpi-total-profit">¥0.00</h3></div></div>
+          <div class="flex flex-col lg:flex-row gap-4 w-full" id="stockin-kpi-row">
+<div class="card-modern p-4 flex-1 min-w-[200px]"><p class="text-xs text-gray-500 mb-1">当前入库商品数</p><h3 class="text-xl font-bold" id="kpi-item-count">0</h3></div><div class="card-modern p-4 flex-1 min-w-[200px]"><p class="text-xs text-gray-500 mb-1">预计总进货额</p><h3 class="text-xl font-bold" id="kpi-total-cost">¥0.00</h3></div><div class="card-modern p-4 flex-1 min-w-[200px]"><p class="text-xs text-gray-500 mb-1">预计总零售价</p><h3 class="text-xl font-bold" id="kpi-total-price">¥0.00</h3></div><div class="card-modern p-4 flex-1 min-w-[200px]"><p class="text-xs text-gray-500 mb-1">预计综合毛利</p><h3 class="text-xl font-bold" id="kpi-total-profit">¥0.00</h3></div></div>
           <div class="card-modern p-4 mb-2"><div class="flex flex-wrap gap-2 action-bar"><button class="btn btn-success" id="complete-stock"><i class="fa fa-check-circle"></i> 完成入库</button><button class="btn btn-warning" id="quick-add"><i class="fa fa-bolt"></i> 快速添加</button><button class="btn btn-info" id="add-medicine"><i class="fa fa-plus"></i> 添加药品</button><button class="btn btn-outline" id="import-data-bulk"><i class="fa fa-upload"></i> 批量导入</button></div></div>
           <div class="fixed inset-0 bg-gray-900 bg-opacity-75 z-[9999] flex items-center justify-center hidden backdrop-blur-sm" id="import-progress" style="display:none;">
             <div class="bg-white rounded-2xl shadow-2xl p-10 max-w-2xl w-full mx-6 transform transition-all scale-105 border border-gray-100">
@@ -77,7 +77,7 @@
     <!-- 隐藏的批量导入文件选择框 -->
     <input type="file" id="bulk-file" accept=".xls,.xlsx,.csv,.txt" style="display:none" />
      <!-- 右侧抽屉：新增药品 -->
-    <div id="add-med-drawer" style="position:fixed;top:0;right:0;height:100%;width:420px;max-width:90vw;background:#fff;border-left:1px solid #e5e7eb;box-shadow:0 12px 32px rgba(0,0,0,.18);transform:translateX(100%);transition:transform .3s ease-in-out;z-index:50;display:flex;flex-direction:column;">
+    <div id="add-med-drawer" style="position:fixed;inset:0;background:#fff;box-shadow:0 12px 32px rgba(0,0,0,.18);z-index:1000;display:none;flex-direction:column;padding:16px;overflow-y:auto;">
       <div class="p-4 border-b border-gray-100 flex items-center justify-between">
         <h3 class="font-bold">新增药品</h3>
         <button id="close-med-drawer" class="text-gray-500 hover:text-accent"><i class="fa fa-times"></i></button>
