--- a/src/main/resources/static/stock-in.html
+++ b/src/main/resources/static/stock-in.html
@@ -18,7 +18,7 @@
     <script>(function(){if(!window.tailwind){window.tailwind={config:{}};} if(!window.tailwind.config){window.tailwind.config={};}})();</script>
     <script>if(typeof tailwind==='undefined'){window.tailwind={config:{}};}</script>
     <script>tailwind.config={theme:{extend:{colors:{primary:'#165DFF',secondary:'#36B37E',accent:'#FF5630'},fontFamily:{inter:['Inter','system-ui','sans-serif']}}}};</script>
-    <style>.main-content{flex:1 1 auto;padding:1rem;min-height:calc(100vh - 64px);overflow-y:auto;scrollbar-width:thin;}.main-content::-webkit-scrollbar{width:8px}.main-content::-webkit-scrollbar-track{background:#f5f5f5;border-radius:4px}.main-content::-webkit-scrollbar-thumb{background:#d1d5db;border-radius:4px}.main-content::-webkit-scrollbar-thumb:hover{background:#9ca3af}.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0;} .layout-two-column{display:grid;grid-template-columns:380px 1fr;gap:.6rem;}@media(max-width:1200px){.layout-two-column{grid-template-columns:1fr;}} .main-content .container-fluid{max-width:100%;margin:0 auto;} body, .main-content, .app-shell{background:#fff;}
+    <style>.main-content{flex:1 1 auto;padding:1rem;min-height:calc(100vh - 64px);overflow-y:auto;scrollbar-width:thin;}.main-content::-webkit-scrollbar{width:8px}.main-content::-webkit-scrollbar-track{background:#f5f5f5;border-radius:4px}.main-content::-webkit-scrollbar-thumb{background:#d1d5db;border-radius:4px}.main-content::-webkit-scrollbar-thumb:hover{background:#9ca3af}.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0;} .main-content .container-fluid{max-width:100%;margin:0 auto;} body, .main-content, .app-shell{background:#fff;}
     /* Limit width */
     .app-shell { max-width: 1440px !important; margin: 0 auto; }
     </style>
@@ -37,15 +37,12 @@
   <main class="flex-1 flex flex-col pt-16">
     <div class="main-content" id="main-content"><div class="container-fluid section-gap"><div class="app-shell">
         <div class="flex flex-col md:flex-row md:items-center justify-between mb-6 gap-4 action-bar"><div><h2 class="page-title font-bold page-title-decor">智能入库</h2><p class="text-gray-500">药品批次与入库记录管理</p></div><div class="flex gap-3"><button class="btn btn-outline" id="import-data-top"><i class="fa fa-upload"></i> 批量导入</button><button class="btn btn-primary" id="new-stock"><i class="fa fa-plus"></i> 新建入库单</button></div></div>
-      <div class="layout-two-column">
-        <aside class="layout-sidebar space-y-4">
-          <div class="card-modern p-4 smart-suggestion"><div class="flex items-center gap-2 mb-2"><i class="fa fa-lightbulb-o text-blue-500"></i><h3 class="font-medium text-sm">操作提示</h3></div><ul class="space-y-2 text-xs text-gray-600"><li>确保药品信息准确，尤其批准文号与有效期</li><li>注意批号是否正确</li><li>入库前仔细核对药品与实物是否一致</li></ul></div>
-          <div class="card-modern p-4"><h3 class="font-bold text-sm mb-3">入库流程</h3><ol class="space-y-2 text-xs text-gray-600"><li>1. 创建入库单</li><li>2. 添加药品</li><li>3. 确认信息</li><li>4. 完成入库</li></ol></div>
-          <!-- Stock In Info removed as requested -->
-        </aside>
-        <div class="layout-main space-y-6">
-          <div class="flex flex-col lg:flex-row gap-4 w-full" id="stockin-kpi-row">
-<div class="card-modern p-4 flex-1 min-w-[200px]"><p class="text-xs text-gray-500 mb-1">当前入库商品数</p><h3 class="text-xl font-bold" id="kpi-item-count">0</h3></div><div class="card-modern p-4 flex-1 min-w-[200px]"><p class="text-xs text-gray-500 mb-1">预计总进货额</p><h3 class="text-xl font-bold" id="kpi-total-cost">¥0.00</h3></div><div class="card-modern p-4 flex-1 min-w-[200px]"><p class="text-xs text-gray-500 mb-1">预计总零售价</p><h3 class="text-xl font-bold" id="kpi-total-price">¥0.00</h3></div><div class="card-modern p-4 flex-1 min-w-[200px]"><p class="text-xs text-gray-500 mb-1">预计综合毛利</p><h3 class="text-xl font-bold" id="kpi-total-profit">¥0.00</h3></div></div>
+      <div class="space-y-6">
+        <div class="overflow-x-auto" id="stockin-kpi-row">
+          <div class="flex flex-row flex-nowrap gap-4 min-w-max">
+<div class="card-modern p-4 w-60 shrink-0"><p class="text-xs text-gray-500 mb-1">当前入库商品数</p><h3 class="text-xl font-bold" id="kpi-item-count">0</h3></div><div class="card-modern p-4 w-60 shrink-0"><p class="text-xs text-gray-500 mb-1">预计总进货额</p><h3 class="text-xl font-bold" id="kpi-total-cost">¥0.00</h3></div><div class="card-modern p-4 w-60 shrink-0"><p class="text-xs text-gray-500 mb-1">预计总零售价</p><h3 class="text-xl font-bold" id="kpi-total-price">¥0.00</h3></div><div class="card-modern p-4 w-60 shrink-0"><p class="text-xs text-gray-500 mb-1">预计综合毛利</p><h3 class="text-xl font-bold" id="kpi-total-profit">¥0.00</h3></div>
+          </div>
+        </div>
           <div class="card-modern p-4 mb-2"><div class="flex flex-wrap gap-2 action-bar"><button class="btn btn-success" id="complete-stock"><i class="fa fa-check-circle"></i> 完成入库</button><button class="btn btn-warning" id="quick-add"><i class="fa fa-bolt"></i> 快速添加</button><button class="btn btn-info" id="add-medicine"><i class="fa fa-plus"></i> 添加药品</button><button class="btn btn-outline" id="import-data-bulk"><i class="fa fa-upload"></i> 批量导入</button></div></div>
           <div class="fixed inset-0 bg-gray-900 bg-opacity-75 z-[9999] flex items-center justify-center hidden backdrop-blur-sm" id="import-progress" style="display:none;">
             <div class="bg-white rounded-2xl shadow-2xl p-10 max-w-2xl w-full mx-6 transform transition-all scale-105 border border-gray-100">
